Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inmem-key-value
  labels:
    app: inmem-key-value
spec:
  type: LoadBalancer
  ports:
  - port: 8080
  selector:
    app: inmem-key-value
