Kubernetes/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: inmem-key-value-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: inmem-key-value
              servicePort: 8080
